--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	android:versionCode="1"
 	android:versionName="1.0" >
 
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17" />
 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -15,7 +15,8 @@
 	<application
 		android:theme="@style/LightTheme"
 		android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name" >
+		android:label="@string/app_name"
+		android:allowBackup="false" >
 		<service
 			android:name=".android.BriarService"
 			android:exported="false" >
