--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -25,7 +25,7 @@
 			</intent-filter>
 		</service>
 		<activity
-			android:name=".android.helloworld.HelloWorldActivity"
+			android:name=".android.HomeScreenActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -33,8 +33,12 @@
 			</intent-filter>
 		</activity>
 		<activity
+		    android:name=".android.contact.ContactListActivity"
+		    android:label="@string/contact_list_title" >
+		</activity>
+		<activity
 			android:name=".android.invitation.AddContactActivity"
-			android:label="@string/add_a_contact" >
+			android:label="@string/add_contact_title" >
 		</activity>
 	</application>
 </manifest>
