Android UI for writing private messages (text only for now).

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -52,5 +52,9 @@
 			android:name=".android.messages.ReadMessageActivity"
 			android:label="@string/messages_title" >
 		</activity>
+		<activity
+			android:name=".android.messages.WriteMessageActivity"
+			android:label="@string/compose_title" >
+		</activity>
 	</application>
 </manifest>
