Show a spinner while Guice is initialising.

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -25,12 +25,16 @@
 			</intent-filter>
 		</service>
 		<activity
-			android:name=".android.HomeScreenActivity"
+			android:name=".android.SplashScreenActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+		</activity>
+		<activity
+			android:name=".android.HomeScreenActivity"
+			android:label="@string/app_name" >
 		</activity>
 		<activity
 		    android:name=".android.contact.ContactListActivity"
