Attached data to DB events to avoid DB lookups; refactored UI code.
Fields in Android UI objects that are accessed from background threads
must be declared volatile. UI objects use data attached to DB events to
avoid DB lookups, which complicates the UI code but should improve
performance.

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -69,11 +69,11 @@
 			android:label="@string/messages_title" >
 		</activity>
 		<activity
-			android:name="net.sf.briar.android.messages.ReadPrivateMessageActivity"
+			android:name=".android.messages.ReadPrivateMessageActivity"
 			android:label="@string/messages_title" >
 		</activity>
 		<activity
-			android:name="net.sf.briar.android.messages.WritePrivateMessageActivity"
+			android:name=".android.messages.WritePrivateMessageActivity"
 			android:label="@string/compose_message_title" >
 		</activity>
 	</application>
