--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -42,15 +42,15 @@
 		</activity>
 		<activity
 			android:name=".android.groups.GroupActivity"
-			android:label="@string/groups_title" >
+			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name=".android.groups.GroupListActivity"
-			android:label="@string/groups_title" >
+			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name=".android.groups.ReadGroupMessageActivity"
-			android:label="@string/groups_title" >
+			android:label="@string/app_name" >
 		</activity>
 		<activity
 			android:name=".android.groups.WriteGroupMessageActivity"
