--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -25,16 +25,20 @@
 			</intent-filter>
 		</service>
 		<activity
+			android:name=".android.HomeScreenActivity"
+			android:label="@string/app_name" >
+		</activity>
+		<activity
+			android:name=".android.SetupActivity"
+			android:label="@string/app_name" >
+		</activity>
+		<activity
 			android:name=".android.SplashScreenActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</activity>
-		<activity
-			android:name=".android.HomeScreenActivity"
-			android:label="@string/app_name" >
 		</activity>
 		<activity
 		    android:name=".android.contact.ContactListActivity"
@@ -55,6 +59,10 @@
 		<activity
 			android:name=".android.groups.WriteGroupMessageActivity"
 			android:label="@string/compose_group_title" >
+		</activity>
+		<activity
+			android:name=".android.identity.CreateIdentityActivity"
+			android:label="@string/create_identity_title" >
 		</activity>
 		<activity
 			android:name=".android.invitation.AddContactActivity"
