--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -65,8 +65,12 @@
 			android:label="@string/app_name" >
 		</activity>
 		<activity
-			android:name=".android.groups.WriteGroupMessageActivity"
-			android:label="@string/app_name" >
+			android:name=".android.groups.WriteBlogPostActivity"
+			android:label="@string/compose_blog_title" >
+		</activity>
+		<activity
+			android:name=".android.groups.WriteGroupPostActivity"
+			android:label="@string/compose_group_title" >
 		</activity>
 		<activity
 			android:name=".android.identity.CreateIdentityActivity"
