--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -45,8 +45,24 @@
 		    android:label="@string/contact_list_title" >
 		</activity>
 		<activity
-			android:name=".android.groups.CreateBlogActivity"
+			android:name=".android.blogs.BlogActivity"
+			android:label="@string/app_name" >
+		</activity>
+		<activity
+			android:name=".android.blogs.BlogListActivity"
+			android:label="@string/blogs_title" >
+		</activity>
+		<activity
+			android:name=".android.blogs.CreateBlogActivity"
 			android:label="@string/create_blog_title" >
+		</activity>
+		<activity
+			android:name=".android.blogs.ReadBlogPostActivity"
+			android:label="@string/app_name" >
+		</activity>
+		<activity
+			android:name=".android.blogs.WriteBlogPostActivity"
+			android:label="@string/compose_blog_title" >
 		</activity>
 		<activity
 			android:name=".android.groups.CreateGroupActivity"
@@ -58,15 +74,11 @@
 		</activity>
 		<activity
 			android:name=".android.groups.GroupListActivity"
-			android:label="@string/app_name" >
+			android:label="@string/groups_title" >
 		</activity>
 		<activity
-			android:name=".android.groups.ReadGroupMessageActivity"
+			android:name=".android.groups.ReadGroupPostActivity"
 			android:label="@string/app_name" >
-		</activity>
-		<activity
-			android:name=".android.groups.WriteBlogPostActivity"
-			android:label="@string/compose_blog_title" >
 		</activity>
 		<activity
 			android:name=".android.groups.WriteGroupPostActivity"
