UI for setting and entering the password that encrypts the database key.

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -30,7 +30,7 @@
 		</activity>
 		<activity
 			android:name=".android.SetupActivity"
-			android:label="@string/app_name" >
+			android:label="@string/setup_title" >
 		</activity>
 		<activity
 			android:name=".android.SplashScreenActivity"
