--- a/briar-tests/build.xml
+++ b/briar-tests/build.xml
@@ -26,7 +26,7 @@
 	<target name='compile'>
 		<mkdir dir='../briar-api/build'/>
 		<javac srcdir='../briar-api/src'
-			destdir='../briar-api/build' source='1.5'
+			destdir='../briar-api/build' source='1.5' target='1.5'
 			includeantruntime='false' debug='off'>
 			<classpath>
 				<fileset refid='api-jars'/>
@@ -34,7 +34,7 @@
 		</javac>
 		<mkdir dir='../briar-core/build'/>
 		<javac srcdir='../briar-core/src'
-			destdir='../briar-core/build' source='1.5'
+			destdir='../briar-core/build' source='1.5' target='1.5'
 			includeantruntime='false' debug='off'>
 			<classpath>
 				<fileset refid='core-jars'/>
@@ -43,7 +43,7 @@
 			</classpath>
 		</javac>
 		<mkdir dir='build'/>
-		<javac srcdir='src' destdir='build' source='1.5'
+		<javac srcdir='src' destdir='build' source='1.5' target='1.5'
 			includeantruntime='false' debug='off'>
 			<classpath>
 				<fileset refid='test-jars'/>
