--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -27,7 +27,7 @@
 			</intent-filter>
 		</service>
 		<activity
-			android:name=".android.HomeScreenActivity"
+			android:name=".android.DashboardActivity"
 			android:logo="@drawable/logo"
 			android:label="@string/app_name" >
 		</activity>
@@ -59,10 +59,10 @@
 		    android:name=".android.contact.ContactListActivity"
 			android:logo="@drawable/logo"
 		    android:label="@string/contact_list_title"
-		    android:parentActivityName=".android.HomeScreenActivity" >
+		    android:parentActivityName=".android.DashboardActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.HomeScreenActivity"
+				android:value=".android.DashboardActivity"
 			/>
 		</activity>
 		<activity
@@ -99,10 +99,10 @@
 			android:name=".android.groups.GroupListActivity"
 			android:logo="@drawable/logo"
 			android:label="@string/forums_title"
-		    android:parentActivityName=".android.HomeScreenActivity" >
+		    android:parentActivityName=".android.DashboardActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".android.HomeScreenActivity"
+				android:value=".android.DashboardActivity"
 			/>
 		</activity>
 		<activity
