--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -68,32 +68,62 @@
 		<activity
 			android:name=".android.contact.ConversationActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+		    android:parentActivityName=".android.contact.ContactListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.contact.ContactListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.contact.ReadPrivateMessageActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+		    android:parentActivityName=".android.contact.ContactListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.contact.ContactListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.contact.WritePrivateMessageActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/new_message_title" >
+			android:label="@string/new_message_title"
+		    android:parentActivityName=".android.contact.ContactListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.contact.ContactListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.groups.ConfigureGroupActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+		    android:parentActivityName=".android.groups.GroupListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.groups.GroupListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.groups.CreateGroupActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/create_forum_title" >
+			android:label="@string/create_forum_title"
+		    android:parentActivityName=".android.groups.GroupListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.groups.GroupListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.groups.GroupActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+		    android:parentActivityName=".android.groups.GroupListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.groups.GroupListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.groups.GroupListActivity"
@@ -108,17 +138,32 @@
 		<activity
 		    android:name=".android.groups.ManageGroupsActivity"
 			android:logo="@drawable/logo"
-		    android:label="@string/manage_subscriptions_title" >
+		    android:label="@string/manage_subscriptions_title"
+		    android:parentActivityName=".android.groups.GroupListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.groups.GroupListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.groups.ReadGroupPostActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+		    android:parentActivityName=".android.groups.GroupListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.groups.GroupListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.groups.WriteGroupPostActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/new_post_title" >
+			android:label="@string/new_post_title"
+		    android:parentActivityName=".android.groups.GroupListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.groups.GroupListActivity"
+			/>
 		</activity>
 		<activity
 			android:name=".android.identity.CreateIdentityActivity"
@@ -128,7 +173,12 @@
 		<activity
 			android:name=".android.invitation.AddContactActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/add_contact_title" >
+			android:label="@string/add_contact_title"
+		    android:parentActivityName=".android.contact.ContactListActivity" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.contact.ContactListActivity"
+			/>
 		</activity>
 	</application>
 </manifest>
