Compact encodings for integers, strings and byte arrays.
This adds complexity but will save a lot of bandwidth, as most of the
strings and byte arrays we want to send are less than 128 bytes.

The extra complexity isn't exposed outside of the serial component.

--- a/briar-tests/build.xml
+++ b/briar-tests/build.xml
@@ -76,11 +76,10 @@
 		</javac>
 	</target>
 	<target name='test' depends='compile'>
-		<junit printsummary='on' fork='yes' forkmode='once' haltonfailure='yes' showoutput='true'>
+		<junit printsummary='on' fork='yes' forkmode='once' haltonfailure='yes'>
 			<assertions>
 				<enable/>
 			</assertions>
-			<formatter type="plain" usefile="false"/>
 			<classpath>
 				<fileset refid='test-jars'/>
 				<fileset refid='desktop-jars'/>
