--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -69,6 +69,7 @@
 			android:name=".android.contact.ConversationActivity"
 			android:logo="@drawable/logo"
 			android:label="@string/app_name"
+			android:windowSoftInputMode="stateHidden"
 		    android:parentActivityName=".android.contact.ContactListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
