--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -78,7 +78,7 @@
 		<activity
 			android:name=".android.contact.ReadPrivateMessageActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/read_message_title"
+			android:label="@string/app_name"
 		    android:parentActivityName=".android.contact.ContactListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -88,7 +88,7 @@
 		<activity
 			android:name=".android.contact.WritePrivateMessageActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/write_message_title"
+			android:label="@string/app_name"
 		    android:parentActivityName=".android.contact.ContactListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -138,7 +138,7 @@
 		<activity
 		    android:name=".android.groups.ManageGroupsActivity"
 			android:logo="@drawable/logo"
-		    android:label="@string/manage_subscriptions_title"
+		    android:label="@string/manage_forums_title"
 		    android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -158,7 +158,7 @@
 		<activity
 			android:name=".android.groups.WriteGroupPostActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/new_post_title"
+			android:label="@string/app_name"
 		    android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
