Print stdout and stderr of unit tests to track down test failures.

--- a/briar-tests/build.xml
+++ b/briar-tests/build.xml
@@ -76,7 +76,7 @@
 		</javac>
 	</target>
 	<target name='test' depends='compile'>
-		<junit printsummary='on' fork='yes' forkmode='once'>
+		<junit printsummary='withOutAndErr' fork='yes' forkmode='once'>
 			<assertions>
 				<enable/>
 			</assertions>
