--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -17,6 +17,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 	<application
+		android:name=".android.BriarApplication"
 		android:theme="@style/LightTheme"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
@@ -28,6 +29,15 @@
 				<action android:name="org.briarproject.android.BriarService" />
 			</intent-filter>
 		</service>
+		<activity
+			android:name=".android.CrashReportActivity"
+			android:logo="@drawable/logo"
+			android:label="@string/crash_report_title" >
+			<intent-filter>
+				<action android:name="org.briarproject.REPORT_CRASH" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
 		<activity
 			android:name=".android.DashboardActivity"
 			android:logo="@drawable/logo"
