--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -51,7 +51,8 @@
 		<activity
 			android:name=".android.PasswordActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+			android:windowSoftInputMode="stateVisible" >
 		</activity>
 		<activity
 			android:name=".android.SettingsActivity"
@@ -117,6 +118,7 @@
 			android:name=".android.contact.WritePrivateMessageActivity"
 			android:logo="@drawable/logo"
 			android:label="@string/app_name"
+			android:windowSoftInputMode="stateVisible"
 			android:parentActivityName=".android.contact.ContactListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -137,6 +139,7 @@
 			android:name=".android.groups.CreateGroupActivity"
 			android:logo="@drawable/logo"
 			android:label="@string/create_forum_title"
+			android:windowSoftInputMode="stateVisible"
 			android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -187,6 +190,7 @@
 			android:name=".android.groups.WriteGroupPostActivity"
 			android:logo="@drawable/logo"
 			android:label="@string/app_name"
+			android:windowSoftInputMode="stateVisible"
 			android:parentActivityName=".android.groups.GroupListActivity" >
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -196,7 +200,8 @@
 		<activity
 			android:name=".android.identity.CreateIdentityActivity"
 			android:logo="@drawable/logo"
-			android:label="@string/new_identity_title" >
+			android:label="@string/new_identity_title"
+			android:windowSoftInputMode="stateVisible" >
 		</activity>
 		<activity
 			android:name=".android.invitation.AddContactActivity"
